fixed issue with header overlapping body

--- a/kiTindr/app/assets/stylesheets/application.css
+++ b/kiTindr/app/assets/stylesheets/application.css
@@ -13,3 +13,7 @@
  *= require_tree .
  *= require_self
  */
+
+.main-content {
+  margin-top: 50px;
+}
